[package]
name = "mini_rtmp_hls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
env_logger = "0.11.5"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"

streamhub = { path = "../xiu/library/streamhub" }
rtmp = { path = "../xiu/protocol/rtmp" }
hls = { path = "../xiu/protocol/hls" }